<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_search_itinerary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs.b07.cscb07courseproject.SearchItinerary"
    tools:showIn="@layout/activity_search_itinerary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departure_date"/>
    <EditText
        android:id="@+id/departure_date_field_itin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:hint="@string/date_format"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin"/>
    <EditText
        android:id="@+id/origin_field_itin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:hint="@string/origin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/destination"/>
    <EditText
        android:id="@+id/destination_field_itin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:hint="@string/destination"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_order" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/unsorted_itin">
        <RadioButton
            android:id="@+id/unsorted_itin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsorted"
            android:onClick="onRadioButtonClickedItin"/>
        <RadioButton
            android:id="@+id/sort_cost_itin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_cost"
            android:onClick="onRadioButtonClickedItin"/>
        <RadioButton
            android:id="@+id/sort_travel_itin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_travel"
            android:onClick="onRadioButtonClickedItin"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:onClick="searchItineraries"/>


</LinearLayout>
