<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07courseproject.LoginScreen"
    tools:showIn="@layout/activity_login_screen"
    android:weightSum="1">

    <EditText
        android:id="@+id/email_field"
        android:inputType="textNoSuggestions"
        android:layout_weight="0.29"
        android:hint="@string/email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/password_field"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="fill_parent"
        android:layout_height="31dp"
        android:layout_weight="0.28" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="login"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user"
        android:onClick="goRegister"/>


</LinearLayout>
